[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Networking/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_right = 124.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerUI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -48.0
margin_right = 124.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerUI"]
margin_right = 248.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="MultiplayerUI/HBoxContainer"]
margin_left = 103.0
margin_right = 145.0
margin_bottom = 20.0
text = "Host"

[node name="HBoxContainer2" type="HBoxContainer" parent="MultiplayerUI"]
margin_top = 36.0
margin_right = 248.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="MultiplayerUI/HBoxContainer2"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IP Address: "

[node name="LineEdit" type="LineEdit" parent="MultiplayerUI/HBoxContainer2"]
margin_left = 81.0
margin_right = 209.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
text = "127.0.0.1"

[node name="Button" type="Button" parent="MultiplayerUI/HBoxContainer2"]
margin_left = 213.0
margin_right = 248.0
margin_bottom = 24.0
text = "Join"

[node name="HBoxContainer3" type="HBoxContainer" parent="MultiplayerUI"]
margin_top = 76.0
margin_right = 248.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MultiplayerUI/HBoxContainer3"]
margin_left = 74.0
margin_right = 173.0
margin_bottom = 20.0
text = "Back to Menu"

[node name="WaitLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -7.0
margin_right = 124.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waiting"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MultiplayerUI/HBoxContainer/Button" to="." method="hostButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/HBoxContainer2/Button" to="." method="joinButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/HBoxContainer3/Button" to="." method="backButtonPressed"]
